--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <p>GitHub: <a href="https://github.com/Ujjwalsharma-404" target="_blank">Ujjwalsharma-404</a></p>
   </section>
 <div class="resume-container">
-  <a href="resume.pdf" download class="resume-btn">Download Resume</a>
+  <a href="https://drive.google.com/file/d/1UPjz1JJrfOdgu9nr9qKIdcvaoVyuNOWp/view?usp=drivesdk" download class="resume-btn">Download Resume</a>
 </div>
 
   <footer>
